<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit" />
    
    <EditText
        android:id="@+id/edit_text_building_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@id/submit_button"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/building_name" />
    
    <EditText
        android:id="@+id/edit_text_abbreviation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edit_text_building_name"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/abbreviation" />
   
    <TextView
        android:id="@+id/accessible_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below = "@id/edit_text_abbreviation"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:ems="10"
        android:text="@string/wheelchair_accessible"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/accessible_text"
        android:layout_toRightOf="@+id/accessible_text" />
    
    <!--  Setting MissingPrefix to ignore is only required to circumvent a bug in the Linter linker which is included in the Android SDK.
    	  Further details regarding this bug can be found at:	https://code.google.com/p/gmaps-api-issues/issues/detail?id=5002 
	-->
    
    <fragment
        android:id="@+id/submit_map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/accessible_text"
        tools:ignore="MissingPrefix"
        map:cameraTargetLat="44.5657285"
		map:cameraTargetLng="-123.2788689"
        map:cameraTilt="30"
        map:cameraZoom="15"
        map:mapType="normal"
        map:uiCompass="true"
        map:uiRotateGestures="true"
        map:uiScrollGestures="true"
        map:uiTiltGestures="true"
        map:uiZoomControls="false"
        map:uiZoomGestures="true" />
    
</RelativeLayout>
